force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__PromiseCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__PromiseCompletionDate__c</fullName>
    <description>This field shows Date and Time when KanbanCard becomes 100% done.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field shows Date and Time when KanbanCard becomes 100% done.</inlineHelpText>
    <label>Promise Completion Date</label>
    <type>DateTime</type>
</CustomField>