force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__StartDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDate__c</fullName>
    <description>The Start Date of the kanban card estimation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select start date of the assign work.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>