force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDateTime__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The Start Datetime of the kanban card estimation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The start date of the work item.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>