force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__State__c.field-meta.xml
<CustomField>
    <fullName>leankor__State__c</fullName>
    <description>The state in which the kanban card was left after the last saved.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the state in which the kanban card was left after the last saved. Possible values include &apos;inzone&apos;, &apos;nozone&apos; or &apos;inzone-rejectconfirm&apos; (i.e. user put card in a zone but did not allow business rules to run)</inlineHelpText>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>