force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Swimlane__c.field-meta.xml
<CustomField>
    <fullName>leankor__Swimlane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This contain Swimlane ID in which card is present .</description>
    <inlineHelpText>This contain Swimlane ID in which card is present .</inlineHelpText>
    <label>Swimlane</label>
    <referenceTo>leankor__Swimlane__c</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>