force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__TemplateBoard__c.field-meta.xml
<CustomField>
    <fullName>leankor__TemplateBoard__c</fullName>
    <formula>leankor__ValueStream__r.leankor__IsTemplateBoard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Board</label>
    <type>Checkbox</type>
</CustomField>