force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__TimeToLaunchMonth__c.field-meta.xml
<CustomField>
    <fullName>leankor__TimeToLaunchMonth__c</fullName>
    <description>Time to project launch expressed in months.</description>
    <formula>IF(ISPICKVAL(leankor__ValueStream__r.leankor__BoardType__c, &apos;UberBoard&apos;), 
IF(((Year(DATEVALUE(leankor__StartDateTime__c))*12 + Month(DATEVALUE(leankor__StartDateTime__c))) - (Year(DATEVALUE(leankor__ValueStream__r.leankor__ProjectRoom__r.leankor__ProjectLaunchDateTime__c))*12 + Month(DATEVALUE(leankor__ValueStream__r.leankor__ProjectRoom__r.leankor__ProjectLaunchDateTime__c))))=0,0,((Year(DATEVALUE(leankor__StartDateTime__c))*12 + Month(DATEVALUE(leankor__StartDateTime__c))) - (Year(DATEVALUE(leankor__ValueStream__r.leankor__ProjectRoom__r.leankor__ProjectLaunchDateTime__c))*12 + Month(DATEVALUE(leankor__ValueStream__r.leankor__ProjectRoom__r.leankor__ProjectLaunchDateTime__c)))-IF(DAY(DATEVALUE(leankor__ValueStream__r.leankor__ProjectRoom__r.leankor__ProjectLaunchDateTime__c)) &gt; 15 || DAY(DATEVALUE(leankor__StartDateTime__c)) &lt;= 15, 0, -0.5))),IF(((Year(DATEVALUE(leankor__StartDateTime__c))*12 + Month(DATEVALUE(leankor__StartDateTime__c))) - (Year(DATEVALUE(leankor__ValueStream__r.leankor__ProjectBoardLaunchDateTime__c))*12 + Month(DATEVALUE(leankor__ValueStream__r.leankor__ProjectBoardLaunchDateTime__c))))=0,0,((Year(DATEVALUE(leankor__StartDateTime__c))*12 + Month(DATEVALUE(leankor__StartDateTime__c))) - (Year(DATEVALUE(leankor__ValueStream__r.leankor__ProjectBoardLaunchDateTime__c))*12 + Month(DATEVALUE(leankor__ValueStream__r.leankor__ProjectBoardLaunchDateTime__c)))-IF(DAY(DATEVALUE(leankor__ValueStream__r.leankor__ProjectBoardLaunchDateTime__c)) &gt; 15 || DAY(DATEVALUE(leankor__StartDateTime__c)) &lt;= 15, 0, -0.5))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time To Launch (Month)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>