force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__TimeToProjectLaunch__c.field-meta.xml
<CustomField>
    <fullName>leankor__TimeToProjectLaunch__c</fullName>
    <description>Time to project launch expressed in days.</description>
    <formula>IF( ISPICKVAL( leankor__ValueStream__r.leankor__BoardType__c, &apos;UberBoard&apos;) , 

DATEVALUE(leankor__StartDateTime__c) - DATEVALUE(leankor__ValueStream__r.leankor__ProjectRoom__r.leankor__ProjectLaunchDateTime__c), 

DATEVALUE(leankor__StartDateTime__c) - DATEVALUE(leankor__ValueStream__r.leankor__ProjectBoardLaunchDateTime__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time To Launch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>