force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Top__c.field-meta.xml
<CustomField>
    <fullName>leankor__Top__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The top of a kanban card follows a coordinate system which is similar to &quot;y&quot; but not including the thickness of the top tab bar. In other words, top &lt; y.</description>
    <inlineHelpText>Enter the top coordinate of the kanban card. Top is similar to the y coordinate except less than y by the number of pixels wide the tool bar at the top of the browser window.</inlineHelpText>
    <label>Top</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>