force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__UncompletedPoints__c.field-meta.xml
<CustomField>
    <fullName>leankor__UncompletedPoints__c</fullName>
    <formula>IF(leankor__PercentComplete2__c &lt; 1, leankor__Point__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uncompleted Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>