force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__UrlLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__UrlLink__c</fullName>
    <description>This Field is use for Saving URL link Which is attached with Kanban Card</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This Field is use for Saving URL link Which is attached with Kanban Card</inlineHelpText>
    <label>URL Link</label>
    <type>Url</type>
</CustomField>