force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Value Stream instance that includes this kanban card.</description>
    <inlineHelpText>Select the Value Stream which will include this kanban card.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Kanban Card List</relationshipLabel>
    <relationshipName>Kanbans</relationshipName>
    <type>Lookup</type>
</CustomField>