force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__ValueStreamCardLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamCardLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows Liked card ID on KanbanCard.</description>
    <inlineHelpText>This field shows Liked card ID on KanbanCard.</inlineHelpText>
    <label>Value Stream Card Link</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>