force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__ValueStreamLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the value stream which provides a detailed process view under the Kanban Card.</description>
    <inlineHelpText>Enter the value stream which provides a detailed process view under the  Kanban Card.</inlineHelpText>
    <label>Value Stream Link</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Kanban Cards (Value Stream)</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>