force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Width__c.field-meta.xml
<CustomField>
    <fullName>leankor__Width__c</fullName>
    <defaultValue>170</defaultValue>
    <description>This is the total width of a kanban card in pixels.</description>
    <inlineHelpText>Enter the width of the kanban card in pixels.</inlineHelpText>
    <label>Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>