force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__WorkingDays__c.field-meta.xml
<CustomField>
    <fullName>leankor__WorkingDays__c</fullName>
    <formula>(5*(FLOOR((leankor__DueDate__c-DATE(1900,1,8))/7))+MIN(5,MOD(leankor__DueDate__c-DATE(1900,1,8),7)))-(5*(FLOOR((leankor__StartDate__c-DATE(1900,1,8))/7))+MIN(5,MOD(leankor__StartDate__c-DATE(1900,1,8),7)))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>