force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__X__c.field-meta.xml
<CustomField>
    <fullName>leankor__X__c</fullName>
    <defaultValue>100</defaultValue>
    <description>x coordinate on the value stream surface</description>
    <inlineHelpText>Enter the x coordinate of the kanban card. This value is usually identical to the &quot;left&quot; field value.</inlineHelpText>
    <label>X Coordinate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>