force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Y__c.field-meta.xml
<CustomField>
    <fullName>leankor__Y__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The y coordinate of the kanban card on the value stream surface.</description>
    <inlineHelpText>Enter the y coordinate of the kanban card on the page. The value of &quot;top&quot; is approximately the same as this field except the &quot;top&quot; value does not include the thickness of the top menu bar.</inlineHelpText>
    <label>Y Coordinate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>