force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__Zone__c.field-meta.xml
<CustomField>
    <fullName>leankor__Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains Zone ID in which KanbanCard is present.</description>
    <inlineHelpText>This field contains Zone ID in which KanbanCard is present.</inlineHelpText>
    <label>Zone</label>
    <referenceTo>leankor__Zone__c</referenceTo>
    <relationshipLabel>Kanban Cards</relationshipLabel>
    <relationshipName>Kanban_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>