force-app/main/default/objects/leankor__KanbanCard__c/fields/leankor__ZoneGUID__c.field-meta.xml
<CustomField>
    <fullName>leankor__ZoneGUID__c</fullName>
    <description>The unique GUID of the Zone in which this kanban card currently resides. This is not the Force.com record ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the unique GUID of the Zone in which this kanban card currently resides. This is not the Force.com record ID.</inlineHelpText>
    <label>Zone GUID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>