force-app/main/default/objects/leankor__KanbanCard__c/recordTypes/leankor__ActivityCard.recordType-meta.xml
<RecordType>
    <fullName>leankor__ActivityCard</fullName>
    <active>true</active>
    <label>ActivityCard</label>
</RecordType>