force-app/main/default/objects/leankor__KanbanCard__c/recordTypes/leankor__FolderCard.recordType-meta.xml
<RecordType>
    <fullName>leankor__FolderCard</fullName>
    <active>true</active>
    <label>FolderCard</label>
</RecordType>