force-app/main/default/objects/leankor__KanbanCard__c/recordTypes/leankor__MileStoneCard.recordType-meta.xml
<RecordType>
    <fullName>leankor__MileStoneCard</fullName>
    <active>true</active>
    <label>MileStoneCard</label>
</RecordType>