force-app/main/default/objects/leankor__KanbanCard__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>leankor__Title__c</columns>
    <columns>leankor__Priority__c</columns>
    <columns>NAME</columns>
    <columns>leankor__ValueStream__c</columns>
    <columns>leankor__Description__c</columns>
    <columns>leankor__PromiseCompletionDate__c</columns>
    <columns>leankor__PercentComplete2__c</columns>
    <columns>leankor__HarveyBallDoneDate__c</columns>
    <columns>leankor__DescriptionLong__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>