force-app/main/default/objects/leankor__KanbanCard__c/listViews/leankor__All_My_Cards.listView-meta.xml
<ListView>
    <fullName>leankor__All_My_Cards</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>leankor__ValueStream__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All My Cards</label>
</ListView>